uprava po kontrole od Radka

--- a/text/jtag_ap.tex
+++ b/text/jtag_ap.tex
@@ -1,6 +1,6 @@
 %\chapter{Návrh a implementace rozšiřujícího modulu pro přístup na systémovou sběrnici pomocí JTAG protokolu}	\label{jtag_ap}
 \chapter{Popis modulu pro přístup na systémovou sběrnici pomocí JTAG protokolu}	\label{jtag_ap}
-Pro přístup na systémovou sběrnici procesoru jsou navrženy dvě varianty komunikačního protokolu přenášeného pomocí JTAG rozhraní. Obě varianty protokolu jsou popsány pro čtyřvodičovou variantu \acs{JTAG} komunikace mezi debuggerem (aplikační prostředí pro testování obvodů) a \acs{JTAG} systémem (navržený systém pro testování).
+Pro přístup na systémovou sběrnici procesoru jsou navrženy dvě varianty komunikačního protokolu přenášeného pomocí JTAG rozhraní. Obě varianty protokolu jsou popsány pro čtyřvodičovou variantu \acs{JTAG} komunikace mezi debuggerem (aplikační prostředí pro testování obvodů) a \acs{JTAG} systémem (navržený systém pro testování). \hl{Navržený protokol bude sloužit jako vedlejší možnost přístupu na systémovou sběrnici, která je časově optimálnější.}
 
 \section{Návrh optimalizovaného protokolu pro přístup na systémovou sběrnici}	\label{sec:protokoly}
 %\section{Návrh časově optimalizovaného protokolu pro přístup na systémovou sběrnici}	\label{sec:protokoly}
@@ -12,7 +12,7 @@ V případě obou variant protokolu je adresa zkrácena na 21 bitů namísto pů
 Délka přenášených dat může být volena jako \textit{Word} (32-bitů), \textit{Half-Word} (16-bitů) a \textit{Byte} (8-bitů). Obvyklým způsobem je přístup na sběrnici v celé šířce 32 bitů. Pro specifické požadavky je možné využít také kratších variant. Příkladem může být potřeba přepsání logické hodnoty určitého bitu registru, či určité skupiny bitů. Délka přenesených dat je dekódována podle adresy na signál \texttt{be} systémové sběrnice.
 
 \subsection{Varianta protokolu Busy-wait} \label{subsec:busy-wait}
-Varianta protokolu \textbf{Busy-wait} je založena na principu signalizace probíhající operace na sběrnici před odesíláním požadovaných dat. Tato informace je předávána debuggeru jako 3-bitová hodnota \textit{status}, prostřednictvím signálu \texttt{\acs{TDO}}. \textit{Status} může nabývat hodnot dle tabulky \ref{tab:status_vals}, kde je vidět, že je využitý pouze jeden bit ze tří. Důvodem je to, že pole \textit{status} je vysíláno současně s hodnotou \textit{op}, která je vysílána debuggerem, a ta již 3-bitová být musí. Tato varianta protokolu využívá toho, že debugger prochází řídicím stavovým automatem (\acs{TAP}) po spuštění požadavku na systémové sběrnici vždy přes stav \textit{Run-Test/Idle}, kde čeká po několik taktů hodinového signálu \texttt{\acs{TCK}}. Tato prodleva dává možnost systémové sběrnici požadavek dokončit. V případě nedokončeného požadavku je při dalším požadavku signalizováno pomocí hodnoty \textit{status} = 1 (\textit{busy}), že nebude akceptován.
+Varianta protokolu \textbf{Busy-wait} je založena na principu signalizace probíhající operace na sběrnici před odesíláním požadovaných dat. Tato informace je předávána debuggeru jako 3-bitová hodnota \textit{status}, prostřednictvím signálu \texttt{\acs{TDO}}. \textit{Status} může nabývat hodnot dle tabulky \ref{tab:status_vals}, kde je vidět, že je využitý pouze jeden bit ze tří. Důvodem je to, že pole \textit{status} je vysíláno současně s hodnotou \textit{op}, která je vysílána debuggerem, a ta již 3-bitová být musí. Tato varianta protokolu využívá toho, že debugger prochází řídicím stavovým automatem (\acs{TAP}) po spuštění požadavku na systémové sběrnici vždy přes stav \textit{Run-Test/Idle}, kde čeká po několik taktů hodinového signálu \texttt{\acs{TCK}}. Tato prodleva dává možnost systémové sběrnici požadavek dokončit. V případě nedokončeného požadavku je při dalším požadavku signalizováno pomocí hodnoty \textit{status} = 1 (\textit{busy}), že nebude akceptován. \hl{Oproti přístupu na systémovou sběrnici pomocí stávajícího testovacího systému není třeba tento stav nijak resetovat.}
 
 \begin{table}[!h]
   \caption{Tabulka status hodnot.}
@@ -80,7 +80,7 @@ Význam hodnot \textit{op} (operace) je popsán v tabulce \ref{tab:op_vals}. Vý
 
 %\subsubsection{Busy-wait mód - čtení} 
 \subsubsection{Čtení ze systémové sběrnice prostřednictvím Busy-wait módu} 
-Časový průběh JTAG komunikace v případě čtení ze systémové sběrnice je zobrazen na obrázku \ref{fig:busy_r}. Nejprve je odeslána hodnota \textit{op} = 0, 2 nebo 4, která dle tabulky \ref{tab:op_vals} uvozuje odesílání adresy, ze které bude vyčtena hodnota registru a délka čtených dat. Jakmile je adresa odeslána, spustí se čtení ze systémové sběrnice. Debugger projde pomocí signálu \texttt{\acs{TMS}} řídicím stavovým automatem dle stavového diagramu na obrázku \ref{fig:tap_controller} zpět do stavu \textit{Shift-DR} a odešle hodnotu \textit{op} = 6, kterou je požadováno odeslání dat vyčtených z požadované adresy zpět prostřednictvím \texttt{\acs{TDO}} pinu. V případě, že je navrácen \textit{status} = 1 (busy), odpovídající nedokončenému čtení ze systémové sběrnice, nejsou následující data platná. V dalším průchodu má debugger možnost žádat data znovu (\textit{op} = 6), nebo zažádat o vyčtení z jiné adresy.
+Časový průběh JTAG komunikace v případě čtení ze systémové sběrnice je zobrazen na obrázku \ref{fig:busy_r}. Nejprve je odeslána hodnota \textit{op} = 0, 2 nebo 4, která dle tabulky \ref{tab:op_vals} uvozuje odesílání adresy, ze které bude vyčtena hodnota registru a délka čtených dat. Jakmile je adresa odeslána, spustí se čtení ze systémové sběrnice. Debugger projde pomocí signálu \texttt{\acs{TMS}} řídicím stavovým automatem dle stavového diagramu na obrázku \ref{fig:tap_controller} zpět do stavu \textit{Shift-DR} a odešle hodnotu \textit{op} = 6, kterou je požadováno odeslání dat vyčtených z požadované adresy zpět prostřednictvím \texttt{\acs{TDO}} pinu. \hl{Délka odesílaných dat je určena předchozí hodnotou \textit{op} odesílanou v rámci přenosu adresy.} V případě, že je navrácen \textit{status} = 1 (busy), odpovídající nedokončenému čtení ze systémové sběrnice, nejsou následující data platná. V dalším průchodu má debugger možnost žádat data znovu (\textit{op} = 6), nebo zažádat o vyčtení z jiné adresy.
 
 \begin{figure}[H]
   \begin{center}
@@ -124,8 +124,7 @@ Na obrázku \ref{fig:wait_w} je znázorněn časový průběh \acs{JTAG} komunik
 \section{Zhodnocení návrhu optimalizovaného protokolu pro přístup na systémovou sběrnici}
 V této kapitole byly popsány dvě varianty protokolu pro přístup na systémovou sběrnici pomocí \acs{JTAG} rozhraní. Obě varianty jsou časově optimalizované, oproti přístupu na systémovou sběrnici pomocí původního testovacího systému popsaného v podkapitole \ref{sec:risc-v_dbg}.
 
-První varianta je inspirována řešením původního testovacího systému, kde se využívá signalizace probíhajícího přístupu na systémovou sběrnici prostřednictvím \textit{status} kódu. Tato varianta je oproti původnímu přístupu časově optimálnější, protože není třeba procházet řídicím stavovým automatem
- v takové míře.
+První varianta je inspirována řešením původního testovacího systému, kde se využívá signalizace probíhajícího přístupu na systémovou sběrnici prostřednictvím \textit{status} kódu. Tato varianta je oproti původnímu přístupu časově optimálnější, protože není třeba procházet řídicím stavovým automatem v takové míře. \hl{Počet průchodů je snížen zejména, protože adresa registru a data se odesílají přímo, zatímco v případě použití původního přístupu je třeba zapisovat adresu registru a data postupně do registrů testovacího systému}.
 
 Druhá varianta protokolu je nejvíce časově optimální, protože využívá signalizace probíhajícího přístupu na systémovou sběrnici prostřednictvím \texttt{\acs{TDO}}. Díky této vlastnosti také není třeba procházet řídicím stavovým automatem během komunikace a po zpracování požadavku na systémové sběrnici nevzniká výrazná prodleva před započetím další komunikace.
 
