--- a/text/zaver.tex
+++ b/text/zaver.tex
@@ -4,7 +4,7 @@
 
 Cílem práce bylo navrhnout modul podporující komunikaci pomocí dvouvodičového \acs{JTAG} protokolu a rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru.
 
-V úvodní kapitole je uveden princip fungování \acs{JTAG} rozhraní, systém pro testování \acs{RISC-V} procesorů, který je používaný v projektu pro testování daného procesorového jádra, a princip fungování systémové sběrnice tohoto procesoru. Princip fungování testovacího systému v tomto uspořádání a fungování systémové sběrnice bylo třeba nastudovat, aby bylo možné navrhnout sekundární, časově optimalizovaný protokol pro přístup na systémovou sběrnici, který je popsaný v kapitole \ref{jtag_ap}.
+V úvodní kapitole je uveden princip fungování \acs{JTAG} rozhraní, systém pro testování \acs{RISC-V} procesorů, který je používaný v projektu pro testování daného procesorového jádra, a princip fungování systémové sběrnice tohoto procesoru. Princip fungování testovacího systému v tomto uspořádání a systémové sběrnice bylo třeba nastudovat, aby bylo možné navrhnout sekundární, časově optimalizovaný protokol pro přístup na systémovou sběrnici, který je popsaný v kapitole \ref{jtag_ap}.
 
 Druhá kapitola popisuje vybraný princip komunikace dvouvodičovou variantou \acs{JTAG} protokolu dle standardu IEEE 1149.7 a způsob implementace modulu podporující tento způsob komunikace. Pro zvolení vhodné varianty dvouvodičové \acs{JTAG} komunikace bylo třeba nastudovat příslušné části standardu IEEE 1149.7, což bylo poměrně náročné, protože tento standard je velmi obsáhlý.
 
