uprava abstraktu + uvodu + odmazani higlightu

--- a/text/jtag_2w.tex
+++ b/text/jtag_2w.tex
@@ -3,7 +3,7 @@
 Tato kapitola se zaměřuje na princip fungování dvouvodičového \acs{JTAG} rozhraní s možností přepnutí na původní čtyřvodičovou variantu a zpět. Popsána je zde také aktivační sekvence pro výběr jedné z těchto dvou variant komunikace, definovaná standardem IEEE 1149.7. V této kapitole je také uveden způsob implementace modulu pro zpracování aktivační sekvence a převod vstupního dvouvodičového \acs{JTAG} rozhraní na původní čtyřvodičové. %, pokud je zvolena dvouvodičová varianta.
 	
 \section{Účel redukce počtu pinů \acs{JTAG} rozhraní}	\label{sec:2w_interface}
-Důvodem pro snížení počtu pinů potřebných pro testování integrovaných obvodů je možnost využít dva volné piny k jinému účelu během testování, například pro jejich běžnou funkci, kterou mají mimo testovací režim. \hl{V jiných případech může být důvodem také nedostatek pinů.} Dvouvodičové \acs{JTAG} rozhraní je definováno standardem IEEE 1149.7 a je nazýváno \textbf{compact \acs{JTAG}} (c\acs{JTAG}). Dvouvodičové rozhraní využívá ke komunikaci piny \texttt{\acs{TCK}} a \texttt{\acs{TMS}}, které mají pro dvouvodičovou variantu označení s příponou C (compact), tedy \texttt{\acs{TCKC}} a \texttt{\acs{TMSC}}. \cite{IEEE_1149-7} \cite{JTAG}
+Důvodem pro snížení počtu pinů potřebných pro testování integrovaných obvodů je možnost využít dva volné piny k jinému účelu během testování, například pro jejich běžnou funkci, kterou mají mimo testovací režim. V jiných případech může být důvodem také nedostatek pinů. Dvouvodičové \acs{JTAG} rozhraní je definováno standardem IEEE 1149.7 a je nazýváno \textbf{compact \acs{JTAG}} (c\acs{JTAG}). Dvouvodičové rozhraní využívá ke komunikaci piny \texttt{\acs{TCK}} a \texttt{\acs{TMS}}, které mají pro dvouvodičovou variantu označení s příponou C (compact), tedy \texttt{\acs{TCKC}} a \texttt{\acs{TMSC}}. \cite{IEEE_1149-7} \cite{JTAG}
 
 Dvouvodičová varianta podporuje zapojení ve hvězdicové topologii, jak je vidět na obrázku \ref{fig:star2_sch}. Nicméně návrh modulu popisovaného v této kapitole se omezuje pouze na jedno zařízení, protože funkcionalita podporující připojení více zařízení do hvězdicové topologie není implementována.
 
@@ -15,7 +15,7 @@ Dvouvodičová varianta podporuje zapojení ve hvězdicové topologii, jak je vi
 	\label{fig:star2_sch}
 \end{figure}
 
-Nevýhodou dvouvodičové varianty \acs{JTAG} rozhraní je potřeba serializace jednotlivých signálu původního čtyřvodičového rozhraní. Z tohoto důvodu je přenos dat pomocí dvouvodičové varianty v nejlepším případě 3-krát pomalejší než v případě původní čtyřvodičové, \hl{za použití stejné frekvence hodinového signálu \texttt{{\acs{TCK}}}}. \cite{IEEE_1149-7}
+Nevýhodou dvouvodičové varianty \acs{JTAG} rozhraní je potřeba serializace jednotlivých signálu původního čtyřvodičového rozhraní. Z tohoto důvodu je přenos dat pomocí dvouvodičové varianty v nejlepším případě 3-krát pomalejší než v případě původní čtyřvodičové, za použití stejné frekvence hodinového signálu \texttt{\acs{TCK}}. \cite{IEEE_1149-7}
 
 \section{Serializace signálů čtyřvodičového \acs{JTAG} rozhraní na dvouvodičové}	\label{sec:oscan1} 
 Pro dvouvodičovou variantu \acs{JTAG} komunikace je zapotřebí odesílat hodnoty datových signálů {\texttt{\acs{TDI}}}, {\texttt{\acs{TDO}}} a řídicího signálu \texttt{\acs{TMS}} původního čtyřvodičového \acs{JTAG} protokolu sériově, v rámci jediného signálu \texttt{\acs{TMSC}}. Standard IEEE 1149.7 definuje několik verzí formátu serializace dat. Pro návrh popisovaný v této práci byl vybrán základní formát OSCAN1, který definuje prostou serializaci hodnot \texttt{\acs{TDI}}, \texttt{\acs{TMS}} a \texttt{\acs{TDO}} signálů. Formát OSCAN1 byl zvolen pro jeho jednoduchost a konzistenci ve všech stavech řídicího stavového automatu \acs{TAP}. Formát je zobrazen na obrázku \ref{fig:oscan}, kde je obecně naznačena předcházející aktivační sekvence. První bit formátu nese hodnotu negace \texttt{\acs{TDI}} signálu, druhým bitem je přenesena hodnota \texttt{\acs{TMS}} signálu a třetím je přenášena hodnota \texttt{\acs{TDO}} signálu opačným směrem. \cite{IEEE_1149-7}
