lehké úpravy pro odevzdání práce

--- a/text/jtag_2w.tex
+++ b/text/jtag_2w.tex
@@ -201,9 +201,9 @@ Neméně důležitou částí obvodu jsou dva klopné obvody generující asynch
 
 Jelikož pro návrh popsaný v této kapitole je uvažována pouze detekce tří pulsů (\textit{Selection Sequence}), je dále obvodem zpracováván pouze signál \texttt{select\_detect}. Ostatní signály příslušející jiným variantám nejsou dále využívány, ale jsou generovány dle obvodu na obrázku pro případné budoucí využití.
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \begin{center}
-    \includegraphics[scale=0.7]{obrazky/cJTAG_escape_circuit.pdf}
+    \includegraphics[scale=0.68]{obrazky/cJTAG_escape_circuit.pdf}
   \end{center}
   \caption{Schéma obvodu pro detekci úvodní sekvence pro přepnutí \acs{JTAG} protokolu}
 	\label{fig:cJTAG_escape_circuit}
@@ -240,7 +240,7 @@ Logické hradlo na výstupu registru pro nastavení \texttt{online\_i} signálu 
 
 \begin{figure}[H]
   \begin{center}
-    \includegraphics[scale=0.78]{obrazky/cJTAG_sel_cp_circuit.pdf}
+    \includegraphics[scale=0.74]{obrazky/cJTAG_sel_cp_circuit.pdf}
   \end{center}
   \caption{Schéma obvodu pro zpracování kontrolní části aktivační sekvence}
 	\label{fig:cJTAG_sel_cp_circuit}
