finální verze sem. práce - odevzdáno

--- a/nastaveni.tex
+++ b/nastaveni.tex
@@ -109,7 +109,7 @@
 
 %%% Abstrakt
 \abstract[%
-This semestral thesis deals with testing IC's containing \acs{RISC-V} processor core by \acs{JTAG} protocol. This thesis objective is to design an IP block for 2-wire \acs{JTAG} protocol support xand design of extended protocol for \acs{RISC-V} processor system bus access. Designed IP block will be used for the IC testing via 2-wire \acs{JTAG} interface, for the purpose of pin count reduction. The extended protocol will be used for IC testing time optimization. The thesis includes descriptions of the \acs{RISC-V} testing system, designed IP block for 2-wire \acs{JTAG} protocol handling and description of its implementation, and design of optimized protocol. 
+This semestral thesis deals with testing IC's containing \acs{RISC-V} processor core by \acs{JTAG} protocol. This thesis objective is to design an IP block for 2-wire \acs{JTAG} protocol support and design of extended protocol for \acs{RISC-V} processor system bus access. Designed IP block will be used for the IC testing via 2-wire \acs{JTAG} interface, for the purpose of pin count reduction. The extended protocol will be used for IC testing time optimization. The thesis includes descriptions of the \acs{RISC-V} testing system, designed IP block for 2-wire \acs{JTAG} protocol handling and description of its implementation, and design of optimized protocol. 
 ]{%
 Tato semestrální práce se zabývá testováním integrovaných obvodů s procesorem \acs{RISC-V} pomocí \acs{JTAG} protokolu. Cílem práce je návrh modulu pro podporu dvouvodičové varianty \acs{JTAG} protokolu a návrh rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru pomocí \acs{JTAG} rozhraní. Navržený modul bude použit pro testování integrovaného obvodu pomocí dvouvodičového \acs{JTAG} rozhraní, za účelem redukce počtu pinů. Rozšiřující protokol bude sloužit pro časovou optimalizaci testování integrovaného obvodu. Práce obsahuje popisy systému pro testování \acs{RISC-V} procesorů, navrženého modulu pro dvouvodičový \acs{JTAG} protokol, včetně způsobu jeho implementace, a návrhu optimalizovaného protokolu.
 }
