popis cast stavoveho automatu pro dynamic wait

--- a/text/jtag_ap.tex
+++ b/text/jtag_ap.tex
@@ -139,16 +139,31 @@ Modul pro komunikaci pomocí navrženého protokolu je rozdělen na dvě části
 Tento způsob implementace stavového automatu byl vybrán jako kompromis mezi variantou samostatných stavových automatů pro jednotlivé varianty protokolu a mezi jedním sdíleným stavovým automatem pro obě varianty. Pokud by bylo zvoleno řešení se samostatnými stavovými automaty, byly by stavy ve kterých nejsou přenášena data zbytečně duplikovány (například stav \textit{S\_IDLE}). Toto řešení by také zbytečně navyšovalo počet klopných obvodů potřebný pro definování stavů. V případě sloučení všech stavů pro oba protokoly, by byla kombinační logika stavového automatu výrazně složitější a pravděpodobně i celkově obsáhlejší. Toto řešení by mělo za následek výrazně náročnější implementaci případných změn či vylepšení (například přidání dalšího protokolu). 
 
 \subsection{Varianta protokolu Busy-wait - stavový automat} \label{subsec:busy-wait-fsm}
-Princip fungování části stavového automatu pro komunikaci pomocí \textbf{Busy-wait} varianty protokolu je znázorněn stavovým diagramem na obrázku \ref{fig:busy_wait_fsm}. Pokud je zvolena varianta protokolu \textbf{Busy-wait}, přechází automat ze stavu \textit{S\_OP} na základě přijaté hodnoty \textit{op} do stavu \textit{S\_ADDR\_SHIFT} nebo \textit{S\_DATA\_SHIFT}, v případě vybrané varianty protokolu.
+Princip fungování části stavového automatu pro komunikaci pomocí \textbf{Busy-wait} varianty protokolu je znázorněn stavovým diagramem na obrázku \ref{fig:busy_wait_fsm}. Pokud je zvolena varianta protokolu \textbf{Busy-wait}, přechází automat ze stavu \textit{S\_OP} na základě přijaté hodnoty \textit{op} do stavu \textit{S\_ADDR\_SHIFT} nebo \textit{S\_DATA\_SHIFT}.
 
 V případě zápisu na systémovou sběrnici stavový automat obsluhuje příjem adresy a dat podle časového průběhu na obrázku \ref{fig:busy_w}. Jednotlivým částem průběhu odpovídají jednotlivé stavy, mezi kterými automat přechází na základě jejich délky, která je stanovena hodnotou čítače \texttt{shift\_cnt}. Tento čítač je při každé změně stavu resetován. Ze stavu \textit{S\_OP} přechází automat do stavu \textit{S\_ADDR\_SHIFT}, jakmile je přijata hodnota \textit{op}, která je přidružena přenosu adresy. Po přijetí adresy přechází automat do stavu \textit{S\_DATA\_SHIFT} pro příjem zapisovaných dat, a to za předpokladu, že hodnota \textit{op} odpovídá zápisu (\texttt{we} = 1). Po přijetí zapisovaných dat dle dané délky, která byla určena na základě hodnoty \textit{op} podle tabulky \ref{tab:op_vals}, přechází automat do stavu \textit{S\_REQUEST}. Ve stavu \textit{S\_REQUEST} automat setrvá vždy pouze jeden hodinový takt a je vystaven požadavek na systémovou sběrnici, pokud je předchozí požadavek dokončen (\texttt{rq\_start} = 1).
 
-Průchody stavovým automatem pro čtení ze systémové sběrnice odpovídají časovému průběhu na obrázku \ref{fig:busy_r}. Při prvním průchodu je přijata adresa registru, ze kterého je požadováno data vyčíst. Tato fáze je obdobná, jako v případě zápisu s rozdílem, že ze stavu \textit{S\_ADDR\_SHIFT} se přechází přímo do stavu \textit{S\_REQUEST} (\texttt{we} = 0), kde je vyvolán požadavek na vyčtení dat z adresy (\texttt{rq\_start} = 1). Při druhém průchodu je očekávána hodnota \textit{op} = 6, čímž je podmíněn přechod ze stavu \textit{S\_OP} přímo do stavu \textit{S\_DATA\_SHIFT}, kde jsou vyčtená data odeslána zpět prostřednictvím \texttt{\acs{TDO}} pinu. Stavem \textit{S\_REQUEST} se v tomto průchodu pouze prochází do stavu \textit{S\_IDLE}, a požadavek na systémovou sběrnici není iniciován.
+Průchody stavovým automatem pro čtení ze systémové sběrnice odpovídají časovému průběhu na obrázku \ref{fig:busy_r}. Při prvním průchodu je přijata adresa registru, ze kterého je požadováno data vyčíst. Tato fáze je obdobná, jako v případě zápisu s rozdílem, že ze stavu \textit{S\_ADDR\_SHIFT} se přechází přímo do stavu \textit{S\_REQUEST} (\texttt{we} = 0), kde je vyvolán požadavek na vyčtení dat z adresy (\texttt{rq\_start} = 1). Při druhém průchodu je očekávána hodnota \textit{op} = 6, čímž je podmíněn přechod ze stavu \textit{S\_OP} přímo do stavu \textit{S\_DATA\_SHIFT}, kde jsou vyčtená data odeslána zpět prostřednictvím \texttt{\acs{TDO}} pinu. Stavem \textit{S\_REQUEST}\textit{S\_REQUEST} nejsou totožné  se v tomto průchodu pouze prochází do stavu \textit{S\_IDLE}, a požadavek na systémovou sběrnici není iniciován.
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \begin{center}
     \includegraphics[scale=0.2]{obrazky/busy_fsm_simple.pdf}
   \end{center}
   \caption{Stavový diagram popisující část hlavního stavového automatu pro busy-wait režim.}
 	\label{fig:busy_wait_fsm}
+\end{figure}
+
+\subsection{Varianta protokolu Dynamic-wait - stavový automat} \label{subsec:dyn-wait-fsm}
+Stavový diagram pro část stavového automatu realizující komunikaci pomocí \textbf{Dynamic-wait} varianty protokolu je znázorněn na obrázku \ref{fig:dyn_wait_fsm}. Stavy \textit{S\_ADDR\_SHIFT}, \textit{S\_DATA\_SHIFT} a \textit{S\_REQUEST} nejsou stejnými stavy jako v případě obrázku \ref{fig:busy_wait_fsm}, ale jsou stejně pojmenované pro názornost. Oproti komunikaci \textbf{Busy-wait} variantou protokolu automat přechází ze stavu \textit{S\_OP} do stavu \textit{S\_ADDR\_SHIFT} v případě čtení i zápisu.
+
+V případě příjmu hodnoty \textit{op} odpovídající zápisu na systémovou sběrnici (\texttt{we} = 1) přechází stavový automat ze stavu \textit{S\_ADDR\_SHIFT} do stavu \textit{S\_DATA\_SHIFT} po přijetí adresy na základě hodnoty čítače \texttt{shift\_cnt} obdobně jako v případě zápisu v \textbf{Busy-wait} režimu. Komunikace odpovídá časovému průběhu na obrázku \ref{fig:wait_w}. Po příjmu zapisovaných dat přechází automat do stavu \textit{S\_REQUEST}, kdy je spuštěn požadavek zápisu na systémovou sběrnici, který není oproti předchozí variantě protokolu podmíněn hodnotou \textit{status} = 1 (\textit{busy}), protože tato situace z principu tohoto protokolu nenastane. V tomto stavu již začíná z pohledu této varianty protokolu fáze čekání na zpracování požadavku na systémové sběrnici, proto musí být na \texttt{\acs{TDO}} pinu nastavena hodnota log. \texttt{0}. Z tohoto důvodu jsou nastaveny signály \texttt{tdo\_dyn} = 0 a \texttt{tdo\_dyn\_en} = 1 v tomto stavu. Poté automat přechází do stavu \textit{S\_WAIT}, kde setrvá dokud není zápis na systémovou sběrnici dokončen. Jakmile je zápis dokončen přechází automat do stavu \textit{S\_ACK}, kde je nastaven signál \texttt{tdo\_dyn} na hodnotu log. \texttt{1}. S dalším hodinovým taktem přechází automat zpět do stavu \textit{S\_OP} a komunikace může pokračovat nebo ji debugger může ukončit přechodem ze stavu \textit{Shift-DR} řídicího stavového automatu.
+
+Pro čtení ze systémové sběrnice je třeba po přijetí adresy čteného registru zadat požadavek na systémovou sběrnici, jak je vidět z časového průběhu na obrázku \ref{fig:wait_r}. Stavový automat tedy přejde ze stavu \textit{S\_ADDR\_SHIFT} do stavu \textit{S\_REQUEST} (\texttt{we} = 0). Poté následuje čekání na provedení operace systémovou sběrnicí ve stavu \textit{S\_WAIT} a následně \textit{S\_ACK} stejně jako v případě zápisu. Jakmile je operace dokončena přechází automat do stavu \textit{S\_DATA\_SHIFT} a data jsou odeslána zpět prostřednictvím \texttt{\acs{TDO}} pinu. Po přenosu požadovaných dat přechází automat do stavu \textit{S\_OP} a debugger může pokračovat v komunikaci nebo komunikaci ukončit přechodem ze stavu \textit{Shift-DR} řídicího stavového automatu.
+
+\begin{figure}[!h]
+  \begin{center}
+    \includegraphics[scale=0.19]{obrazky/dyn_fsm_simple.pdf}
+  \end{center}
+  \caption{Stavový diagram popisující část hlavního stavového automatu pro dynamic-wait režim.}
+	\label{fig:dyn_wait_fsm}
 \end{figure}
